<resources>
    <string name="app_name">bellaria</string>
    <string name="txv_user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="passwordAgain">Repetir Contraseña</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="singUp">Registrarse</string>
    <string name="btn_return">Volver</string>
    <string name="nameBusiness">Nombre empresa</string>
    <string name="location">Localización</string>
    <string name="email">Email</string>
    <string name="home">Inicio</string>
    <string name="orders">Mis pedidos</string>
    <string name="logout">Cerrar sesión</string>
    <string name="drawerOpen">abrir</string>
    <string name="drawerClose">cerrar</string>
    <string name="buy">Pedir</string>
    <string name="accept">aceptar</string>
    <string name="cancel">cancelar</string>
    <string name="cancel_order">¿Desea anular el pedido?</string>
    <string name="product">Producto: </string>
    <string name="quantity">Cantidad: </string>
    <string name="amount">Importe: </string>
    <string name="status">Estado: </string>
    <string name="setQuantity">Introduce la cantidad</string>
    <string name="orderOf">Pedido de </string>
    <string name="requestedFrom">Solicitado: </string>

</resources>
