<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardview_pedido"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="true"
    android:focusable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/item_pedido"
        android:padding="15dp">

        <ImageView
            android:id="@+id/imageView_pedido"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:padding="4dp" />

        <TextView
            android:id="@+id/txv_layout_pedidos_nombreProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/imageView_pedido"
            android:text="@string/orderOf"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#000000"
            android:layout_marginStart="15dp" />

        <TextView
            android:id="@+id/txv_layout_pedidos_nombreProducto_insert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/txv_layout_pedidos_nombreProducto"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#000000"
            android:layout_marginStart="15dp" />

        <TextView
            android:id="@+id/txv_layout_pedidos_cantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txv_layout_pedidos_nombreProducto"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="6dp"
            android:layout_toRightOf="@id/imageView_pedido"
            android:text="@string/quantity"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txv_layout_pedidos_cantidad_insert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txv_layout_pedidos_nombreProducto_insert"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="6dp"
            android:layout_toRightOf="@id/txv_layout_pedidos_cantidad"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txv_layout_pedidos_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txv_layout_pedidos_cantidad"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="6dp"
            android:layout_toRightOf="@id/imageView_pedido"
            android:text="@string/requestedFrom"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txv_layout_pedido_fecha_insert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txv_layout_pedidos_cantidad_insert"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="6dp"
            android:layout_toRightOf="@id/txv_layout_pedidos_fecha"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txv_layout_pedidos_importe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txv_layout_pedidos_fecha"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="6dp"
            android:layout_toRightOf="@id/imageView_pedido"
            android:text="@string/quantity"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#000000"
            android:layout_toEndOf="@id/imageView_pedido" />

        <TextView
            android:id="@+id/txv_layout_pedidos_importe_insert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txv_layout_pedido_fecha_insert"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="6dp"
            android:layout_toRightOf="@id/txv_layout_pedidos_importe"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#000000"
            android:layout_toEndOf="@id/txv_layout_pedidos_importe" />

        <TextView
            android:id="@+id/txv_layout_pedidos_estado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txv_layout_pedidos_importe"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="6dp"
            android:layout_toRightOf="@id/imageView_pedido"
            android:text="@string/status"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txv_layout_pedidos_estado_insert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txv_layout_pedidos_importe_insert"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="6dp"
            android:layout_toRightOf="@id/txv_layout_pedidos_estado"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#000000" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>